--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYTEX</title>
 
-    <link rel="icon" type="image/png" href="assets/code02.png">
+    <link rel="icon" type="image/png" href="/assets/code02.png">
     <link rel="stylesheet" href="css/style.css"/>
     <!-- AOS CSS via CDN for broad browser support (including iOS Safari) -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
