--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <img src="assets/instagram.svg" alt="facebook">
         </li>
         <li class="flex-center">
-            <img src="/assets/twitter.svg" alt="facebook">
+            <img src="assets/twitter.svg" alt="facebook">
         </li>
     </ul>
 
