--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
             <img src="assets/facebook.svg" alt="facebook">
         </li>
         <li class="flex-center">
-            <img src="assets/instagram.svg" alt="facebook">
+            <img src="assets/instagram.svg" alt="instagram">
         </li>
         <li class="flex-center">
-            <img src="assets/twitter.svg" alt="facebook">
+            <img src="assets/twitter.svg" alt="twitter">
         </li>
     </ul>
 
