--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
 
     <ul class="footer__social" >
         <li class="flex-center">
-            <img src="assets/facebook.svg" alt="facebook">
+            <a href="https://www.facebook.com/share/1Gh6rAwLYA/" target="_blank">
+                <img src="assets/facebook.svg" alt="facebook">
+            </a>
+            
         </li>
         <li class="flex-center">
             <img src="assets/instagram.svg" alt="instagram">
