--- a/index.html
+++ b/index.html
@@ -320,16 +320,19 @@
 
     <ul class="footer__social" >
         <li class="flex-center">
-            <a href="https://www.facebook.com/share/1Gh6rAwLYA/" target="_blank">
-                <img src="assets/facebook.svg" alt="facebook">
+            <a href="https://www.facebook.com/share/1Gh6rAwLYA/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+                <img src="assets/facebook.svg" alt="Facebook">
             </a>
-            
         </li>
         <li class="flex-center">
-            <img src="assets/instagram.svg" alt="instagram">
+            <a href="https://www.instagram.com/bytex_.sc?igsh=MWlxcDQ3eWpwYjUyZg==" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                <img src="assets/instagram.svg" alt="Instagram">
+            </a>
         </li>
         <li class="flex-center">
-            <img src="assets/twitter.svg" alt="twitter">
+            <a href="https://x.com/BytexSc?t=7H8h-GzJy7IERqkhUfhgQQ&s=09" target="_blank" rel="noopener noreferrer" aria-label="Twitter / X">
+                <img src="assets/twitter.svg" alt="Twitter / X">
+            </a>
         </li>
     </ul>
 
