--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
 
         <div class="trending__image flex-center">
-            <img src="assets/paper-document.png" alt="sushi-5" data-aos="fade-left"/>
+            <img src="assets/paper-document.png"  data-aos="fade-left"/>
 
             <div class="trending__arrow trending__arrow-left">
                 <img src="assets/arrow-vertical.svg" alt="arrow vertical"/>
@@ -229,7 +229,7 @@
 
         <section class="Generally">
             <div class="trending__image flex-center">
-                <img src="assets/meeting.png" alt="sushi-4" data-aos="fade-right"/>
+                <img src="assets/meeting.png"  data-aos="fade-right"/>
 
                 <div class="trending__arrow trending__arrow-top">
                     <img src="assets/arrow-horizontal.svg" alt="arrow horizontal"/>
