--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </li>
         <li class="flex-center">
             <a href="https://x.com/BytexSc?t=7H8h-GzJy7IERqkhUfhgQQ&s=09" target="_blank" rel="noopener noreferrer" aria-label="Twitter / X">
-                <img src="twitter.svg" alt="Twitter / X">
+                <img src="assets/twitter.svg" alt="Twitter / X">
             </a>
         </li>
     </ul>
