--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYTEX</title>
 
-    <link rel="icon" type="image/png" href="assets/code02.png">
+    <link rel="icon" type="image/png" href="/assets/code02.png">
     <link rel="stylesheet" href="css/style.css"/>
-    <!-- AOS CSS via CDN for broad browser support (including iOS Safari) -->
+
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
 </head>
 <body>
@@ -100,7 +101,7 @@
     <h2 class="groups__title" data-aos="flip-up">groups</h2>
 
     <div class="groups__filters club__hide-scrollbar" data-aos="fade-up">
-        
+        <button class="groups__filter-btn">All</button>
         <button class="groups__filter-btn">
             <img src="assets/web.png" alt="web"/>
             web dev
@@ -117,7 +118,7 @@
             <img src="assets/robotic-hand.png" alt="robotic"/>
             technology
         </button>
-       
+        <button class="groups__filter-btn">All</button>
     </div>
 
     <div class="groups__catalogue" data-aos="fade-up">
@@ -215,7 +216,7 @@
         </div>
 
         <div class="trending__image flex-center">
-            <img src="assets/paper-document.png"  data-aos="fade-left"/>
+            <img src="assets/paper-document.png" alt="sushi-5" data-aos="fade-left"/>
 
             <div class="trending__arrow trending__arrow-left">
                 <img src="assets/arrow-vertical.svg" alt="arrow vertical"/>
@@ -229,7 +230,7 @@
 
         <section class="Generally">
             <div class="trending__image flex-center">
-                <img src="assets/meeting.png"  data-aos="fade-right"/>
+                <img src="assets/meeting.png" alt="sushi-4" data-aos="fade-right"/>
 
                 <div class="trending__arrow trending__arrow-top">
                     <img src="assets/arrow-horizontal.svg" alt="arrow horizontal"/>
@@ -302,8 +303,32 @@
     <form class="subscription__form" action="https://formsubmit.co/EmilHao2002@proton.me" method="POST" data-aos="fade-up">
         <input type="text" name="name" class="subscription__input" placeholder="Enter your name" autocomplete="name" required>
         <input type="email" name="email" class="subscription__input" placeholder="Enter your email" autocomplete="email" required>
+
+        <fieldset class="subscription__interests">
+            <legend class="subscription__legend">What groups are you interested in?</legend>
+            <div class="subscription__checkboxes">
+                <label class="subscription__checkbox">
+                    <input type="checkbox" name="interests[]" value="Web Development">
+                    <span>Web Development</span>
+                </label>
+                <label class="subscription__checkbox">
+                    <input type="checkbox" name="interests[]" value="Game Development">
+                    <span>Game Development</span>
+                </label>
+                <label class="subscription__checkbox">
+                    <input type="checkbox" name="interests[]" value="Cybersecurity">
+                    <span>Cybersecurity</span>
+                </label>
+                <label class="subscription__checkbox">
+                    <input type="checkbox" name="interests[]" value="Technology">
+                    <span>Technology</span>
+                </label>
+            </div>
+        </fieldset>
+
         <input type="hidden" name="_subject" value="New subscription from BYTEX CLUB">
         <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_template" value="table">
         <button type="submit" class="subscription__button">Subscribe</button>
     </form>
 
