--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
 
 
-<section class="subscription flex-center" id="Services">
+<section class="subscription flex-center" >
     <h2 data-aos="fade-down">
         get offers straight <br>
         to your inbox
@@ -357,6 +357,11 @@
         <li class="flex-center">
             <a href="https://x.com/BytexSc?t=7H8h-GzJy7IERqkhUfhgQQ&s=09" target="_blank" rel="noopener noreferrer" aria-label="Twitter / X">
                 <img src="assets/twitter.svg" alt="Twitter / X">
+            </a>
+        </li>
+        <li class="flex-center">
+            <a href="https://x.com/BytexSc?t=7H8h-GzJy7IERqkhUfhgQQ&s=09" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
+                <img src="assets/linkedin-svgrepo-com.svg" alt="Linkedin">
             </a>
         </li>
     </ul>
