--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </a>
         </li>
         <li class="flex-center">
-            <a href="https://x.com/BytexSc?t=7H8h-GzJy7IERqkhUfhgQQ&s=09" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
+            <a href="https://www.linkedin.com/in/bytex-sc-97a801389?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
                 <img src="assets/linkedin-svgrepo-com.svg" alt="Linkedin">
             </a>
         </li>
