--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BYuuuTEX</title>
+    <title>BYTEX</title>
 
     <link rel="icon" type="image/png" href="/assets/code02.png">
     <link rel="stylesheet" href="css/style.css"/>
