--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BYTEX</title>
 
     <link rel="icon" type="image/png" href="/assets/code02.png">
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css?V2"/>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
 </head>
