--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         <section class="Generally">
             <div class="trending__image flex-center">
-                <img src="assets/meeting.png" alt="sushi-4" data-aos="fade-right"/>
+                <img src="assets/meeting.png" data-aos="fade-right"/>
 
                 <div class="trending__arrow trending__arrow-top">
                     <img src="assets/arrow-horizontal.svg" alt="arrow horizontal"/>
@@ -303,6 +303,7 @@
 
     <form class="subscription__form" action="https://formsubmit.co/EmilHao2002@proton.me" method="POST" data-aos="fade-up">
         <input type="text" name="name" class="subscription__input" placeholder="Enter your name" autocomplete="name" required>
+        <input type="text" name="degree" class="subscription__input" placeholder="Enter your major" autocomplete="name" required>
         <input type="email" name="email" class="subscription__input" placeholder="Enter your email" autocomplete="email" required>
 
         <fieldset class="subscription__interests">
