--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
         <input type="text" name="name" class="subscription__input" placeholder="Enter your name" autocomplete="name" required>
         <input type="text" name="degree" class="subscription__input" placeholder="Enter your major" autocomplete="name" required>
         <input type="email" name="email" class="subscription__input" placeholder="Enter your email" autocomplete="email" required>
+        
+        
 
         <fieldset class="subscription__interests">
             <legend class="subscription__legend">What groups are you interested in?</legend>
@@ -315,7 +317,7 @@
                 </label>
                 <label class="subscription__checkbox">
                     <input type="checkbox" name="interests[]" value="Game Development">
-                    <span>Game Development</span>
+                    <span>App Development</span>
                 </label>
                 <label class="subscription__checkbox">
                     <input type="checkbox" name="interests[]" value="Cybersecurity">
